[gd_scene load_steps=32 format=3 uid="uid://ctdv4apgops"]

[ext_resource type="Script" path="res://Jogador/jogador.gd" id="1_sqf12"]
[ext_resource type="Texture2D" uid="uid://46ohgi2wredc" path="res://Texturas/Player/playerSprite.png" id="2_rebg4"]
[ext_resource type="PackedScene" uid="uid://y8stf5kqtp5c" path="res://Utilidade/hurt_box.tscn" id="3_30451"]
[ext_resource type="Texture2D" uid="uid://cdvxc4eylrdd" path="res://Texturas/GUI/exp_background - Copia.png" id="4_kdlwp"]
[ext_resource type="Texture2D" uid="uid://cbx7na4mlgbvv" path="res://Texturas/tela boss final.png" id="4_uuayr"]
[ext_resource type="Texture2D" uid="uid://b4ve6ephtpb7b" path="res://Texturas/GUI/exp_progress - Copia.png" id="5_armqj"]
[ext_resource type="Texture2D" uid="uid://cwebj83ndibnb" path="res://Texturas/GUI/healthbar - Copia.png" id="6_x7xd8"]
[ext_resource type="Texture2D" uid="uid://dx2vbyo26uyip" path="res://Texturas/GUI/health - Copia.png" id="7_t25b2"]
[ext_resource type="PackedScene" uid="uid://ciaocokcky53" path="res://Utilidade/basic_button.tscn" id="8_ajqeu"]
[ext_resource type="Texture2D" uid="uid://cv0o8a1evnf6c" path="res://Texturas/gameover.png" id="8_li8jj"]
[ext_resource type="FontFile" uid="uid://dixtrjkh5vey" path="res://Texturas/Fonts/alagard.ttf" id="8_qjd6n"]
[ext_resource type="Texture2D" uid="uid://lx4dp6nuga33" path="res://Texturas/telaBook.png" id="12_nw31d"]
[ext_resource type="Texture2D" uid="uid://brxkgp33d5smp" path="res://Texturas/whitePaper.png" id="13_8ocvo"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_378vh"]
radius = 45.0
height = 94.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ewbeq"]
radius = 49.0102

[sub_resource type="CircleShape2D" id="CircleShape2D_37hqo"]
radius = 1849.2

[sub_resource type="CircleShape2D" id="CircleShape2D_hqi1a"]
radius = 300.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xns4j"]
radius = 50.0

[sub_resource type="CanvasTexture" id="CanvasTexture_7ljb6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0j7do"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rrif1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w1l3k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mrs2c"]

[sub_resource type="CanvasTexture" id="CanvasTexture_1ukwx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0benf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b6421"]

[sub_resource type="Animation" id="Animation_sx08q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_roiqm"]
resource_name = "dead"
length = 5.0
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2), Vector2i(6, 2), Vector2i(7, 2), Vector2i(8, 2), Vector2i(9, 2)]
}

[sub_resource type="Animation" id="Animation_ujsmy"]
resource_name = "walkFront"
length = 8.0
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5, 6, 6.5, 7, 7.5, 8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(8, 0), Vector2i(1, 0), Vector2i(9, 0), Vector2i(2, 0), Vector2i(10, 0), Vector2i(3, 0), Vector2i(11, 0), Vector2i(4, 0), Vector2i(12, 0), Vector2i(5, 0), Vector2i(13, 0), Vector2i(6, 0), Vector2i(14, 0), Vector2i(7, 0), Vector2i(15, 0), Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_3g7de"]
resource_name = "walkBack"
length = 8.0
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5, 6, 6.5, 7, 7.5, 8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(8, 1), Vector2i(1, 1), Vector2i(9, 1), Vector2i(2, 1), Vector2i(10, 1), Vector2i(3, 1), Vector2i(11, 1), Vector2i(4, 1), Vector2i(12, 1), Vector2i(5, 1), Vector2i(13, 1), Vector2i(6, 1), Vector2i(14, 1), Vector2i(7, 1), Vector2i(15, 1), Vector2i(0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p8fi8"]
_data = {
"RESET": SubResource("Animation_sx08q"),
"dead": SubResource("Animation_roiqm"),
"walkBack": SubResource("Animation_ujsmy"),
"walkFront": SubResource("Animation_3g7de")
}

[node name="jogador" type="CharacterBody2D" groups=["player"]]
motion_mode = 1
script = ExtResource("1_sqf12")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("2_rebg4")
hframes = 16
vframes = 3
region_rect = Rect2(512, 0, 32, 32)
region_filter_clip_enabled = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.2, 0.2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CapsuleShape2D_378vh")

[node name="HurtBox" parent="." instance=ExtResource("3_30451")]
visible = false
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource("CircleShape2D_ewbeq")

[node name="Attack" type="Node2D" parent="."]

[node name="FireBallTimer" type="Timer" parent="Attack"]
wait_time = 1.5

[node name="FireBallAttackTimer" type="Timer" parent="Attack/FireBallTimer"]
wait_time = 0.075

[node name="TornadoTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 3.0

[node name="TornadoAttackTimer" type="Timer" parent="Attack/TornadoTimer"]
unique_name_in_owner = true
wait_time = 0.075

[node name="IceTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 5.0

[node name="IceAttackTimer" type="Timer" parent="Attack/IceTimer"]
unique_name_in_owner = true
wait_time = 0.075

[node name="VenenoTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 1.5

[node name="VenenoAttackTimer" type="Timer" parent="Attack/VenenoTimer"]
unique_name_in_owner = true
wait_time = 0.075

[node name="ThunderTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 10.0

[node name="ThunderAttackTimer" type="Timer" parent="Attack/ThunderTimer"]
unique_name_in_owner = true
wait_time = 0.075

[node name="thunderBase" type="Node2D" parent="Attack"]
unique_name_in_owner = true

[node name="EnemyDetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
shape = SubResource("CircleShape2D_37hqo")

[node name="GrabArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
shape = SubResource("CircleShape2D_hqi1a")

[node name="CollectArea" type="Area2D" parent="."]
visible = false
position = Vector2(-104, 81)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
position = Vector2(104, -82)
shape = SubResource("CircleShape2D_xns4j")

[node name="GUILayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="GUILayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="BossScene" type="TextureRect" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
visible = false
self_modulate = Color(1, 1, 1, 0)
top_level = true
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0
texture = SubResource("CanvasTexture_7ljb6")

[node name="BossImg" type="TextureRect" parent="GUILayer/GUI/BossScene"]
unique_name_in_owner = true
process_mode = 2
visible = false
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_top = -3.0
offset_right = 1032.0
offset_bottom = 725.0
scale = Vector2(0.62, 0.5)
texture = ExtResource("4_uuayr")

[node name="ExperienceBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 640.0
offset_bottom = 40.0
texture_under = ExtResource("4_kdlwp")
texture_progress = ExtResource("5_armqj")

[node name="lbl_level" type="Label" parent="GUILayer/GUI/ExperienceBar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 540.0
offset_right = 640.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("8_qjd6n")
text = "Level: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.392157)
layout_mode = 0
offset_left = 304.0
offset_top = 200.0
offset_right = 336.0
offset_bottom = 208.0
value = 50.0
texture_over = ExtResource("6_x7xd8")
texture_progress = ExtResource("7_t25b2")

[node name="HealthBarBoss" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
visible = false
self_modulate = Color(1, 1, 1, 0.392157)
layout_mode = 0
offset_left = 256.0
offset_top = 400.0
offset_right = 288.0
offset_bottom = 408.0
scale = Vector2(4, 2)
value = 50.0
texture_over = ExtResource("6_x7xd8")
texture_progress = ExtResource("7_t25b2")

[node name="lbl_Boss" type="Label" parent="GUILayer/GUI/HealthBarBoss"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1.0
offset_right = 101.0
offset_bottom = 27.0
scale = Vector2(0.3, 0.3)
theme_override_fonts/font = ExtResource("8_qjd6n")
text = "BOSS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelUp" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
visible = false
layout_mode = 0
offset_left = 800.0
offset_top = 50.0
offset_right = 1000.0
offset_bottom = 300.0

[node name="lbl_LevelUp" type="Label" parent="GUILayer/GUI/LevelUp"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("8_qjd6n")
theme_override_font_sizes/font_size = 18
text = "LEVEL UP!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeOptions" type="VBoxContainer" parent="GUILayer/GUI/LevelUp"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 10.0
offset_top = 50.0
offset_right = 190.0
offset_bottom = 100.0

[node name="snd_levelup" type="AudioStreamPlayer" parent="GUILayer/GUI/LevelUp"]
unique_name_in_owner = true

[node name="DeathPanel" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="TextureRect" type="TextureRect" parent="GUILayer/GUI/DeathPanel"]
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0
texture = ExtResource("8_li8jj")

[node name="lbl_Result" type="Label" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_top = 35.0
offset_right = 640.0
offset_bottom = 85.0
theme_override_fonts/font = ExtResource("8_qjd6n")
theme_override_font_sizes/font_size = 30
text = "RESULTADO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="snd_lose" type="AudioStreamPlayer" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true

[node name="btn_menu" parent="GUILayer/GUI/DeathPanel" instance=ExtResource("8_ajqeu")]
layout_mode = 0
offset_left = 280.0
offset_top = 180.0
offset_right = 360.0
offset_bottom = 211.0
theme_override_colors/font_hover_color = Color(1, 1, 1, 0.607843)
theme_override_fonts/font = ExtResource("8_qjd6n")
theme_override_styles/focus = SubResource("StyleBoxEmpty_0j7do")
theme_override_styles/hover = SubResource("StyleBoxEmpty_rrif1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_w1l3k")
theme_override_styles/normal = SubResource("StyleBoxEmpty_mrs2c")
text = "MENU"

[node name="lblTimer" type="Label" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 280.0
offset_top = 20.0
offset_right = 360.0
offset_bottom = 44.0
theme_override_fonts/font = ExtResource("8_qjd6n")
theme_override_font_sizes/font_size = 20
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollectedWeapons" type="GridContainer" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 45.0
offset_right = 208.0
offset_bottom = 61.0
scale = Vector2(1.5, 1.5)
columns = 10

[node name="CollectedUpgrades" type="GridContainer" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 8.0
offset_top = 70.0
offset_right = 208.0
offset_bottom = 86.0
scale = Vector2(1.5, 1.5)
columns = 10

[node name="VictoryPanel" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
visible = false
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="background" type="TextureRect" parent="GUILayer/GUI/VictoryPanel"]
unique_name_in_owner = true
self_modulate = Color(0, 0, 0, 0)
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0
texture = SubResource("CanvasTexture_1ukwx")

[node name="bookTexture" type="TextureRect" parent="GUILayer/GUI/VictoryPanel/background"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0
texture = ExtResource("12_nw31d")
expand_mode = 2

[node name="paperTexture" type="TextureRect" parent="GUILayer/GUI/VictoryPanel/background"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 132.0
offset_right = 492.0
offset_bottom = 360.0
texture = ExtResource("13_8ocvo")
expand_mode = 3

[node name="history" type="Label" parent="GUILayer/GUI/VictoryPanel/background/paperTexture"]
layout_mode = 0
offset_left = 45.0
offset_top = 30.0
offset_right = 310.0
offset_bottom = 310.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_qjd6n")
theme_override_font_sizes/font_size = 13
text = "	CERTIFICADO

Por ter enfrentado e superado os desafios das linguagens de programação, você agora é oficialmente reconhecido como um Mestre dos Códigos. Sua habilidade de navegar por sintaxes complexas, decifrar algoritmos e dominar o reino digital é um testemunho de sua perseverança e curiosidade.

Parabéns você venceu."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="btn_menuVictory" parent="GUILayer/GUI/VictoryPanel/background/paperTexture" instance=ExtResource("8_ajqeu")]
layout_mode = 0
offset_left = 121.0
offset_top = 290.0
offset_right = 241.0
offset_bottom = 320.0
theme_type_variation = &"FlatButton"
theme_override_colors/font_hover_color = Color(0, 0, 0, 0.392157)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_qjd6n")
theme_override_font_sizes/font_size = 15
theme_override_styles/focus = SubResource("StyleBoxEmpty_0benf")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_b6421")
text = "MENU"

[node name="snd_victory" type="AudioStreamPlayer" parent="GUILayer/GUI/VictoryPanel"]
unique_name_in_owner = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_p8fi8")
}

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="Attack/FireBallTimer" to="." method="_on_fire_ball_timer_timeout"]
[connection signal="timeout" from="Attack/FireBallTimer/FireBallAttackTimer" to="." method="_on_fire_ball_attack_timer_timeout"]
[connection signal="timeout" from="Attack/TornadoTimer" to="." method="_on_tornado_timer_timeout"]
[connection signal="timeout" from="Attack/TornadoTimer/TornadoAttackTimer" to="." method="_on_tornado_attack_timer_timeout"]
[connection signal="timeout" from="Attack/IceTimer" to="." method="_on_ice_timer_timeout"]
[connection signal="timeout" from="Attack/IceTimer/IceAttackTimer" to="." method="_on_ice_attack_timer_timeout"]
[connection signal="timeout" from="Attack/VenenoTimer" to="." method="_on_veneno_timer_timeout"]
[connection signal="timeout" from="Attack/VenenoTimer/VenenoAttackTimer" to="." method="_on_veneno_attack_timer_timeout"]
[connection signal="timeout" from="Attack/ThunderTimer" to="." method="_on_thunder_timer_timeout"]
[connection signal="timeout" from="Attack/ThunderTimer/ThunderAttackTimer" to="." method="_on_thunder_attack_timer_timeout"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]
[connection signal="area_entered" from="GrabArea" to="." method="_on_grab_area_area_entered"]
[connection signal="area_entered" from="CollectArea" to="." method="_on_collect_area_area_entered"]
[connection signal="pressed" from="GUILayer/GUI/DeathPanel/btn_menu" to="." method="_on_btn_menu_pressed"]
[connection signal="click_end" from="GUILayer/GUI/VictoryPanel/background/paperTexture/btn_menuVictory" to="GUILayer/GUI/VictoryPanel/background/paperTexture/btn_menuVictory" method="_on_click_end"]
[connection signal="pressed" from="GUILayer/GUI/VictoryPanel/background/paperTexture/btn_menuVictory" to="." method="_on_btn_menu_victory_pressed"]

[editable path="HurtBox"]
